manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: "eve"
  name: "vehicle-api"
spec:
  selector:
    matchLabels:
      app: "vehicle-api"
  template:
    metadata:
      name: "vehicle-api"
    spec:
      automountServiceAccountToken: false
      containers:
        - name: "vehicle-api"
          image: "app-image"
          resources:
            limits:
              cpu: "0.25"
              memory: "256Mi"
