manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vehicle-api
spec:
  selector:
    app.kubernetes.io/name: vehicle-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
